fix(theme): fix color gap on iOS device with meta "theme-color" and remove dead code in css (#5)

--- a/_lume/theme/assets/css/desktop.css
+++ b/_lume/theme/assets/css/desktop.css
@@ -264,20 +264,6 @@ div.header__right{
   font-size: 1.2rem;
 }
 
-.on-narrow {
-  display: none !important;
-}
-
-@media screen and (max-width: 63.999ch) {
-  .on-wide {
-    display: none !important;
-  }
-
-  .on-narrow {
-    display: initial !important;
-  }
-}
-
 
 @media screen and (max-width: 55ch) {
   #header {
@@ -291,11 +277,6 @@ div.header__right{
   }
 }
 
-@media screen and (max-width: 43ch) {
-  #home .on-narrow {
-    display: none !important;
-  }
-}
 
 main{
   margin: 2rem auto;
